[gd_scene load_steps=7 format=3 uid="uid://du8na0oacq85n"]

[ext_resource type="Script" path="res://Scripts/Gameplay/Description.gd" id="1_3mdlr"]
[ext_resource type="AudioStream" uid="uid://dnetj4il4nd84" path="res://Sounds/level-up-3-199576.mp3" id="2_ck0wy"]
[ext_resource type="Texture2D" uid="uid://dsb2fgahfqpfg" path="res://Textures/Objects/description_sprite.png" id="2_opfhn"]

[sub_resource type="SphereShape3D" id="SphereShape3D_6tgex"]
radius = 1.0

[sub_resource type="QuadMesh" id="QuadMesh_inn2a"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mhm8o"]
transparency = 1
albedo_texture = ExtResource("2_opfhn")
billboard_mode = 1
billboard_keep_scale = true

[node name="Description" type="Node3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
script = ExtResource("1_3mdlr")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
stream = ExtResource("2_ck0wy")
bus = &"SFX"

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_6tgex")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D/CollisionShape3D"]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0)
mesh = SubResource("QuadMesh_inn2a")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_mhm8o")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
